--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,7 +6,7 @@ qt5_wrap_cpp(sdr_qrss_MOC_SOURCES ${sdr_qrss_MOC_HEADERS})
 
 set(sdr_qrss_HEADERS ${sdr_qrss_MOC_HEADERS} options.hh)
 
-add_executable(sdr_qrss ${sdr_qrss_SOURCES} ${sdr_qrss_MOC_SOURCES})
-target_link_libraries(sdr_qrss
+add_executable(sdr-qrss ${sdr_qrss_SOURCES} ${sdr_qrss_MOC_SOURCES})
+target_link_libraries(sdr-qrss
  ${Qt5Core_LIBRARIES} ${Qt5Widgets_LIBRARIES} ${LIBS} libsdr libsdr-gui)
 
