--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,19 +55,16 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -ggdb")
 #
 IF(UNIX AND NOT APPLE)
  INCLUDE(GNUInstallDirs)
-ENDIF(UNIX AND NOT APPLE)
-IF(UNIX AND APPLE)
+ELSE(UNIX AND NOT APPLE)
  SET(CMAKE_INSTALL_LIBDIR "lib")
  SET(CMAKE_INSTALL_FULL_LIBDIR "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}")
  SET(CMAKE_INSTALL_INCLUDEDIR "include")
  SET(CMAKE_INSTALL_FULL_INCLUDEDIR "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR}")
  # Set RPATH under MacOS
- SET(CMAKE_SKIP_RPATH FALSE)
- SET(CMAKE_SKIP_BUILD_RPATH FALSE)
- SET(CMAKE_INSTALL_RPATH ${CMAKE_INSTALL_FULL_LIBDIR})
+ SET(CMAKE_SKIP_BUILD_RPATH  FALSE)
+ SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
  SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
- SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
-ENDIF(UNIX AND APPLE)
+ENDIF(UNIX AND NOT APPLE)
 
 # SDR-QRSS sources...
 add_subdirectory(src)
