--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ IF(NOT LIBSDR_FOUND)
  INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/libsdr/src")
  INCLUDE_DIRECTORIES("${PROJECT_BINARY_DIR}/libsdr/src")
  LINK_DIRECTORIES("${PROJECT_BINARY_DIR}/libsdr/src")
- SET(LIBS ${LIBS} libsdr libsdr-gui)
+ SET(LIBS ${LIBS} libsdr)
  SET(SDR_WITH_QT5 ON)
  SET(SDR_WITH_FFTW ON)
  SET(SDR_WITH_PORTAUDIO ON)
@@ -52,7 +52,7 @@ IF(NOT LIBSDR_GUI_FOUND)
  INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/libsdr-gui/src")
  INCLUDE_DIRECTORIES("${PROJECT_BINARY_DIR}/libsdr-gui/src")
  LINK_DIRECTORIES("${PROJECT_BINARY_DIR}/libsdr-gui/src")
- SET(LIBS ${LIBS} sdr-gui)
+ SET(LIBS ${LIBS} libsdr-gui)
  SET(SDR_WITH_FFTW ON)
 ELSE(NOT LIBSDR_GUI_FOUND)
  INCLUDE_DIRECTORIES(${LIBSDR_GUI_INCLUDE_DIRS})
@@ -88,9 +88,9 @@ IF(NOT LIBSDR_FOUND)
   add_subdirectory(libsdr/src)
 ENDIF(NOT LIBSDR_FOUND)
 # ... and compile libsdr-gui if not found:
-IF(NOT LIBSDR_FOUND)
+IF(NOT LIBSDR_GUI_FOUND)
   add_subdirectory(libsdr-gui/src)
-ENDIF(NOT LIBSDR_FOUND)
+ENDIF(NOT LIBSDR_GUI_FOUND)
 
 
 #
